# shop

./: CMakeLists.txt  Doxyfile  README.md  accoutpage.cpp  accoutpage.h  accoutpage.ui  addproductform.cpp  addproductform.h  addproductform.ui  buttonhoverwatcher.cpp  buttonhoverwatcher.h  database.cpp  database.h  editpersonaldataform.cpp  editpersonaldataform.h  editpersonaldataform.ui  finalizetransaction.cpp  finalizetransaction.h  finalizetransaction.ui  focuswatcher.cpp  focuswatcher.h  loginwithregister.cpp  loginwithregister.h  loginwithregister.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multipictures.cpp  multipictures.h  multipictures.ui  product.cpp  product.h  productdetailpage.cpp  productdetailpage.h  productdetailpage.ui  productlistelement.cpp  productlistelement.h  productlistelement.ui  resources.qrc  (+6 more)
doc/: starttt.qea
doc/html/: accoutpage_8cpp.html  accoutpage_8h.html  accoutpage_8h.js  accoutpage_8h_source.html  addproductform_8cpp.html  addproductform_8h.html  addproductform_8h.js  addproductform_8h_source.html  annotated.html  annotated_dup.js  buttonhoverwatcher_8cpp.html  buttonhoverwatcher_8h.html  buttonhoverwatcher_8h.js  buttonhoverwatcher_8h_source.html  class_accout_page-members.html  class_accout_page.html  class_accout_page.js  class_add_product_form-members.html  class_add_product_form.html  class_add_product_form.js  class_button_hover_watcher-members.html  class_button_hover_watcher.html  class_button_hover_watcher.js  class_database-members.html  class_database.html  class_database.js  class_edit_personal_data_form-members.html  class_edit_personal_data_form.html  class_edit_personal_data_form.js  class_finalize_transaction-members.html  class_finalize_transaction.html  class_finalize_transaction.js  class_focus_watcher-members.html  class_focus_watcher.html  class_focus_watcher.js  class_log_in_with_register-members.html  class_log_in_with_register.html  class_log_in_with_register.js  class_main_window-members.html  class_main_window.html  (+79 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+2 more)
